Implemented changes in getting started with requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,9 @@ shapely
 
 # --- Image Processing (Optional) ---
 Pillow
+
+# --- statistical data visualization ---
+seaborn
+
+# --- waitbars ---
+tqdm
